REG-3838 fixet text overflow

--- a/dolly-webapp/src/main/dolly-web/src/components/fields/StaticValue/StaticValue.less
+++ b/dolly-webapp/src/main/dolly-web/src/components/fields/StaticValue/StaticValue.less
@@ -31,3 +31,7 @@
 		text-transform: uppercase;
 	}
 }
+
+span {
+	word-break: break-word;
+}
